# RnaApp

./: .gitignore  Hw4.md  README.md  client.py  docker-compose.yaml  pyproject.toml  requirements.txt  server.py  test.py
app/: contracts.py  main.py  routers.py
definitions/: service.proto
definitions/builds/: service_pb2.py  service_pb2_grpc.py
